--- a/src/Components/Issues/Issue.scss
+++ b/src/Components/Issues/Issue.scss
@@ -1,98 +1,18 @@
-/* 
-.github {
-    background-color: rgb(190, 160, 121);
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 999; 
-    border-radius: 10px;
-    border: 2px solid black;
-}
-
-.btn{
-    border-radius: 5px;
-    background-color: rgb(177, 225, 221);
-}
-
-#issueBody{
-    height: 4000px;
-    background-color: rgb(172, 193, 193);
-}
-.name{
-    padding: 1px 10px 5px 100px;
-    
-}
-.pagination {
-    position: absolute;
-    top: 35px;;
-    right: 200px;
-
-    z-index: 999;
-    display: flex;
-   
-    justify-content: center;
-  
-}
-.title-link {
-    text-decoration: none;
-   
-  }
-  
-
-.Issue{
-        position: absolute;
-        top: 95px;
-        bottom: 30;
-        left: 100px;
-        background-color: rgb(172, 193, 193);
-        padding: 30px;
-
-        .header{
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            .title{
-                font-size: 19px;
-                margin: 0;
-                line-height: 1.2;
-                
-            }
-            
-            &:hover{
-                cursor:pointer;
-                border-radius: 10px;
-                background-color: rgb(137, 137, 160);
-                border:2px solid black;
-                width: 100%;
-            }
-
-            .state{
-                line-height: 1.3;
-                margin-right: 5px; 
-            }
-        }
-        .Badges{
-            margin: 0.4px;
-            border-radius: 3px;
-            padding: 3px;
-            color:rgb(25, 47, 66)
-        } 
-}
-
-
-
-
-
- */
-
- ::after,*::before{
+::after,*::before{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
   }
   
-
+.name{
+  background-color: #333;
+  height: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 10px;
+  color: #ccc;
+}
   body{
     font-family: Arial, sans-serif;
   }
@@ -134,11 +54,12 @@
       background-color:#15ad48;
       color: white;
       font-size: large;
-      padding: 10px 20px;
-      border-radius:4px;
-      margin-top: 20px;
+      padding: 10px 30px ;
+      border-radius:8px;
+      margin-top: 30px;
       margin-bottom: 30px;
-      margin-left: 45%;
+      // margin-right: -100%;
+      margin-left: 85%;
       border: none;
       cursor: pointer;
       &:hover {
@@ -147,11 +68,14 @@
     }
     .issues{
      
-        padding: 20px;
-        width: 95%;
-        margin: auto;
-        height: 100vh;
-        font-size: 1rem;
+        // padding: 20px;
+        // width: 95%;
+        // margin: auto;
+        // height: 100vh;
+        // font-size: 1rem;
+
+
+        
       
     
       
@@ -163,6 +87,7 @@
         border-bottom: 0;
         border-radius: 10px;
   
+        
         li{
           height: 100px;
           border-bottom: 1px solid lightgrey;
@@ -211,13 +136,25 @@
               }
             }
           }
+          
         }
       
         li:hover{
           background-color:#D4E4F2;
           cursor: pointer;
         }
+        
       }
     }
   }
-
+  .page{
+   
+    width: 100%;
+    padding: 20px; // Adjust the padding as needed
+    background-color: #f0f0f0;
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 30px;
+    
+  }
+ 
