--- a/src/Components/ownIssueDetails/OwnIssueDetails.scss
+++ b/src/Components/ownIssueDetails/OwnIssueDetails.scss
@@ -1,18 +1,18 @@
-
-.issueDetails{
-    padding: 20px;
-    width: 80%;
-    background-color: #ccc;
-    padding: 10px 200px 5px 100px;
-}
-.markdown-container {
-    padding: 10px;
-    margin: 1rem 0;
-  }
+ 
+// .issueDetails{
+//     padding: 20px;
+//     width: 80%;
+//     background-color: #ccc;
+//     padding: 10px 200px 5px 100px;
+// }
+// .markdown-container {
+//     padding: 10px;
+//     margin: 1rem 0;
+//   }
   
-  .comment-box {
-    margin-top: 2rem;
-  }
+  // .comment-box {
+  //   margin-top: 2rem;
+  // }
   
   .comment-box textarea {
     width: 100%;
@@ -57,3 +57,9 @@
     content: '---';
   }
   
+
+.container{
+  padding: 20px;
+  background-color: #ccc;
+  height: 100vh;
+}
